styles.css
body {
    font-family: arial, sans-serif;
}

h1 {
    text-align: center;
    color: rgb(135, 135, 135);
    display: block;
    font-family: arial, sans-serif;
    font-size: 24px;
    font-weight: 100;
    line-height: 28px;
    text-align: left;
    margin-bottom: 0px;

}

h3 {
    display: inline;
}

h4 {
    color: #192072;
}

p {
    font-size: small;
    display: block;
}

ul{
    margin: 0px;
    padding: 0px;
}
li {
    list-style: none;
    color: rgb(134, 135, 135);
    display: block;
    font-size: 16px;
    font-weight: 100;
    line-height: 19.2px;
    text-align: left;
    
}
li:first-letter {
    text-transform: capitalize;
}

.wrapper {
    margin: 0 auto;
    width: 650px;
    height: 450px;
    margin-bottom: 2px;
}



.units {
    position: relative;
    font-size: 16px;
    top: -32px; 
}

.temperature {
    color: rgb(32, 33, 36);
    display: inline;
    font-family: arial, helvetica, sans-serif;
    font-size: 64px;
    font-stretch: 100%;
    font-style: normal;
    font-variant-caps: normal;
    font-variant-east-asian: normal;
    font-variant-ligatures: normal;
    font-variant-numeric: normal;
    font-weight: 400;
    height: auto;
    line-height: normal;
    text-align: left;
    user-select: none;
    width: auto;

}
input {
    display: inline;
}
button {
    display: inline;
}
.emoji {
    font-size: x-large;
}

.overview {
    margin-bottom: 20px;
}
.temperature {
    display: inline;
    font-size: 64px;
    line-height: 1;
    color: #202124;
}
img {
  
    max-width: 64px;
    position: inherit;

}

.weather-temperature .active {
    color: rgb(32, 33, 36);
    cursor: default;
}
.weather-temperature .active:hover{
    text-decoration: none;
}


.weather-forecast {
    margin-top: 10px;
}

.weather-forecast h3 {
    color: rgb(134, 135, 135);
    font-size: 14px;
    font-weight: 400;
    text-align: center;
    height: 15px;
    line-height: 15px;
    padding-top: 7px;
}

.weather-forecast img {
    display: block;
    margin: 0 auto;
    height: 48px;
    width: 48px;
}

